fix(web): shiki overflow

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -69,6 +69,8 @@
 }
 
 .shiki {
+  text-wrap: wrap;
+  word-break: break-word;
   padding: 1rem;
 }
 
